tests/diagnostics/multiline.golden
multiline.curlee:2:11: error: test error
  |
  |   let x = 1 +
  |           ^
